dernieres modifications avant la presentation

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"feature_x_enabled": false, "setting_y": 50, "user_profile": {"name": "roott", "email": "root@example.com"}, "notifications_enabled": true, "email_notifications": true, "sms_notifications": false}
+{"feature_x_enabled": false, "setting_y": 50, "user_profile": {"name": "root", "email": "root@example.com"}, "notifications_enabled": true, "email_notifications": true, "sms_notifications": false}
